--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
     "inquirer": "^8.2.5",
+    "jet": "^0.8.2",
     "node": "^19.6.1"
   },
   "devDependencies": {
     "jest": "^29.4.3"
-  }
+  },
+    "scripts": {
+      "test": "jest"
+    }
 }
